semi finished dark mode, pushing to prevent code loss

--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -1,16 +1,13 @@
 
 /*The main header*/
 .App-header {
-  background-color: rgb(36, 36, 36);
   min-height: 100vh;
   display: flex;
   position: relative;
-  color: rgb(173, 173, 173);
+
 }
 /*Nav that contains website categories*/
 .Header-nav {
-  background-color: rgb(48, 48, 48);
-  color:rgb(173, 173, 173);
   font-size:15px;
   text-align:center;
   padding-top: 20px;
@@ -18,7 +15,6 @@
   position:relative;
   border-radius: 25px;
   width: 100%; left:auto; right:auto; margin:auto; 
-  box-shadow: 10px 5px rgb(32, 32, 32);
   
 }
 
