--- a/src/components/css/Settings.css
+++ b/src/components/css/Settings.css
@@ -4,8 +4,8 @@
   }
 
   .Settings-div{
-    width:4%;
     margin-left:1%;
     margin-top: 1%;
   }
+  
   
